--- a/robots-de-ficcion.html
+++ b/robots-de-ficcion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/estilos.css">
     <title>Robots de Ficción</title>
 </head>
+
 <body>
     <header>
         <img src="img/isologo.png" alt="Isologo del Sitio">
@@ -20,16 +22,57 @@
     </header>
 
     <main>
-        <section>
-            <h2>Robots de Ficción</h2>
-            <dl>
-                <!-- Información de los robots -->
-            </dl>
-        </section>
-    </main>
+        <article>
+            <h1> Robots de ficción</h1>
+            <section>
+                <h4>R2-D2</h4>
+                <p>
+                    R2-D2 es un robot astromecánico y el amigo de C-3PO del universo de <i>La Guerra de las Galaxias.</i> <br><br>
 
-    <footer>
-        <p>Trabajo realizado por Pedro Velasco. Asignatura: HTML y CSS</p>
-    </footer>
+                    Perteneció a la casa real de Naboo y sirvió al Rey Veruna durante su reinado. R2-D2 siempre estuvo
+                    alojado en la Nave Real de Naboo, de la misma manera que otros congéneres con la simple función de
+                    reparar cualquier parte de la nave y asistir como navegantes. R2-D2 pertenecía a un tipo de robots
+                    llamados Androides Astromecánicos y eran muy conocidos y queridos a lo largo de la galaxia.<br><br>
+                    Los sonidos y efectos vocales de R2-D2 fueron creados por Ben Burtt. R2-D2 fue diseñado
+                    artísticamente por Ralph McQuarrie, co-desarrollado por John Stears y construido por Tony Dyson.<br>
+                </p>
+                <img src="img/R2-D2.jpg" alt="Imagen de un robot muy simpatico"><br>
+                <a href="https://es.wikipedia.org/wiki/R2-D2">+ sobre R2-D2 en la Wikipedia</a>
+            </section>
+
+            <section>
+                <h4>Maria (Metropolis)</h4>
+                <p>
+                    El robot María es una de las únicas imágenes robóticas de la ciencia ficción temprana. Aparece en
+                    Metropolis, una película de ciencia ficción producida en Alemania en 1927 y dirigida por Fritz Lang.
+                    Toda la película está dominada por la tecnología, con una mezcla de los años veinte y dispositivos
+                    futuristas.
+                    La imagen de este robot femenino es una de las imágenes icónicas más potentes de la historia del
+                    cine.
+                </p>
+                <img src="img/maria.jpg" alt="Imagen maria metropolis"><br>
+                <a href="https://es.wikipedia.org/wiki/Metrópolis_(película_de_1927)">+ sobre Maríaen la Wikipedia</a>
+            </section>
+
+            <section>
+                <h4>Hal 9000</h4>
+                <p>
+                    Hal 9000 es una supercomputadora ficticia que aparece en la serie Odisea espacial, iniciada con la
+                    novela 2001 una odisea del espacio escrita por Arthur C. Clarke en 1968. HAL es la computadora
+                    encargada de controlar las funciones vitales de la nave espacial Discovery, la inteligencia
+                    artificial cambia drásticamente su comportamiento a lo largo de la historia, está programado para no
+                    recibir respuestas que contengan dudas, lo que lo hace muy parecido al pensamiento humano; su
+                    programación consiste en cumplir sin objeciones los planes trazados, razón por la que elimina a los
+                    que dudan o son escépticos, considerándolos mecanismos fallidos.
+                </p>
+                <img src="img/hal-9000.jpg" alt="Hal 9000"><br>
+                <a href="https://es.wikipedia.org/wiki/HAL_9000">+ + sobre Hal 9000 en la  Wikipedia</a>
+            </section>
+        </article>
+    </main>
+            <footer>
+                <p>Trabajo realizado por Pedro Velasco. Asignatura: HTML y CSS</p>
+            </footer>
 </body>
+
 </html>
