--- a/tipos-de-robots.html
+++ b/tipos-de-robots.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="css/estilos.css">
     <title>Tipos de Robots</title>
 </head>
+
 <body>
     <header>
         <img src="img/isologo.png" alt="Isologo del Sitio">
@@ -20,20 +22,69 @@
     </header>
 
     <main>
-        <section>
-            <h2>Clasificación de los Tipos de Robots</h2>
-            <ul>
-                <li>
-                    <strong>Robots Industriales</strong>
-                    <p>Utilizados en procesos de fabricación y ensamblaje.</p>
-                </li>
-                <!-- Otras categorías -->
-            </ul>
-        </section>
+        <h1> Tipos de robots </h1>
+        <p id="quote">Si fuese posible crear un robot capaz de ser funcionario civil, creo que haríamos un gran bien,
+            ya
+            que las Leyes de la Robótica le impedirían dañar a un ser humano, lo incapacitarían para la
+            tiranía,
+            la corrupción, la estupidez, el prejuicio.
+            <br><br><i>Isaac Asimov</i>
+        </p>
+        <br><br>
+        <ul id="milista">
+            <li id="none">
+                <img src="img/icon-robot.png" alt="Ícono de robot">
+                Robots móviles:no se encuentran fijados en un punto físico y tienen la
+                capacidad
+                de moverse. Un ejemplo común hoy en día de este tipo de robot son los vehículos guiados
+                automáticamente, que son un tipo de robots móviles que sigue marcas o cables puestos en
+                tierra o
+                utilizan otros sistemas como el láser para seguir un camino determinado.
+            </li>
+            <li id="none">
+                <img src="img/icon-robot.png" alt="Ícono de robot">
+                Robots industriales: es el tipo de robot más relevante de nuestros tiempos.
+                Se
+                trata de una máquina provista de mecanismos y dispositivos que la capacitan para realizar
+                automáticamente determinadas operaciones industriales que intervienen en el proceso de
+                fabricación.
+            </li>
+            <li id="none">
+                <img src="img/icon-robot.png" alt="Ícono de robot">
+                Clasificación de los robots según su uso:
+                <br><br>
+                <ul>
+                    <li>
+                        Robots domésticos y comerciales
+                    </li>
+                    <li>
+                        Robots a la industria
+                    </li>
+                    <ul>
+                        <li>
+                            Automovilística
+                        </li>
+                        <li>
+                            Embalaje
+                        </li>
+                        <li>
+                            Electrónica
+                        </li>
+                    </ul>
+                    <li>
+                        Vehículos automáticos
+                    </li>
+            </li>
+            <br><br>
+        </ul>
+        </li>
+        </ul>
+
     </main>
 
     <footer>
         <p>Trabajo realizado por Pedro Velasco. Asignatura: HTML y CSS</p>
     </footer>
 </body>
+
 </html>
