--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="import" href="header.html">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Index - Artículo de robots</title>
 </head>
@@ -20,16 +20,13 @@
             </ul>
         </nav>
     </header>
-
-    </header>
-
     <main>
         <article>
             <h1> Robots familiares y sociales en la educación</h1>
-            <h4 id="autor"> Desirée Gómez</h4>
+            <h4><a id="autor" href=#desi> Desirée Gómez</a></h4>
             <h6 id="fecha"> 28 de noviembre de 2018</h6>
             <img src="img/robot.jpg" alt="Imagen de un robot muy simpatico">
-            <p id="leyenda">Foto de Alex Knight en <a> Unsplash </a></p>
+            <p id="leyenda">Foto de Alex Knight en <a  href=https://unsplash.com>  Unsplash </a></p>
             <section>
                 <h3>Robots familiares y sociales en la educación</h3>
                 <p> Hoy en día hay un gran debate abierto sobre si los robots sustituirán a las personas en la mayoría
@@ -91,7 +88,7 @@
                     interesa a nosotros, la educación, hay varios modelos que ayudan en el proceso de aprendizaje, tanto
                     en la educación de los niños o de los adultos como en el aprendizaje de idiomas o de otras
                     disciplinas. <br><br>
-                    Así, por ejemplo, el robot <span class="texto-naranja">Buddy</span> se anuncia como robot emocional
+                    Así, por ejemplo, el robot <a id = enlace href=https://buddytherobot.com/en/buddy-the-emotional-robot> Buddy</a> se anuncia como robot emocional
                     de compañía. Entre sus cualidades,
                     aparte de realizar tareas de vigilancia, acompañamiento, telellamadas y otras acciones que también
                     desarrolla Temi, encontramos la de enseñar a introducirse en la programación.
@@ -118,8 +115,8 @@
                     modalidad de la telepresencia, si bien, en estos casos, la fuerza de su papel no recae en la IA sino
                     en la posibilidad de llevar al estudiante al entorno en el que interactúan sus compañeros de manera
                     remota. <br><br>
-                    Los robots programables <span class="texto-naranja">Pepper</span> y su hermano pequeño <span
-                        class="texto-naranja">Nao</span> los ha desarrollado la empresa SoftBank
+                    Los robots programables <a id = enlace href=https://www.softbankrobotics.com/emea/en/pepper>Pepper</a> y su hermano pequeño 
+                    <a id = enlace href=https://www.softbankrobotics.com/emea/en/nao> Nao</a> los ha desarrollado la empresa SoftBank
                     Robotics. Estos dos robots se están perfeccionando dentro del mundo educativo como herramientas para
                     asistir a los profesores así como plataformas para aprender a programar, tanto en la educación
                     primaria como en la superior.<br><br>
@@ -181,12 +178,12 @@
                     las que seguro que aprenderemos muchas cosas. Bueno, tanto de ellas como de nosotros mismos al
                     relacionarnos con ellas. Quién sabe si los robots nos harán más humanos.</p>
             </section>
-            <p id="autora">Artículo adaptado de <i>Gómez, Desirée (28 de noviembre de 2018). <span
-                        class="texto-naranja"> <b>Robots familiares y sociales en la educación</b> </span></i></p>
+            <p id="autora">Artículo adaptado de <i>Gómez, Desirée (28 de noviembre de 2018). 
+                <a id = enlace href="https://elc.blogs.uoc.edu/es/robots-familiares-y-sociales"> <b>Robots familiares y sociales en la educación</b> </a></i></p>
             <img id="desiree" src="img/Desiree-Gomez.jpg" alt="Foto de Desiree, autora del artículo">
             <section>
                 <p id="desi"><b>Desirée Gómez.</b> Conservadora de contenidos y analista. Gestora de comunidades de la cuenta de
-                    Twitter <span class="texto-naranja">@eLC_UOC</span> y especialista en contenido del blog del eLC en el equipo de Detección y
+                    Twitter <a id = enlace href="https://twitter.com/eLC_UOC">@eLC_UOC</a> y especialista en contenido del blog del eLC en el equipo de Detección y
                     Análisis de Tendencias del eLearn Center de la Universitat Oberta de Catalunya. Lleva a cabo
                     tareas de detección y análisis de tendencias educativas, de innovación y tecnología,
                     conservación de contenidos, comunicación y observación. Cuenta con una licenciatura y un máster
