--- a/robots-de-ficcion.html
+++ b/robots-de-ficcion.html
@@ -44,7 +44,7 @@
                 <h4>Maria (Metropolis)</h4>
                 <p>
                     El robot María es una de las únicas imágenes robóticas de la ciencia ficción temprana. Aparece en
-                    Metropolis, una película de ciencia ficción producida en Alemania en 1927 y dirigida por Fritz Lang.
+                    <i>Metropolis</i>, una película de ciencia ficción producida en Alemania en 1927 y dirigida por Fritz Lang.
                     Toda la película está dominada por la tecnología, con una mezcla de los años veinte y dispositivos
                     futuristas.
                     La imagen de este robot femenino es una de las imágenes icónicas más potentes de la historia del
@@ -57,8 +57,8 @@
             <section>
                 <h4>Hal 9000</h4>
                 <p>
-                    Hal 9000 es una supercomputadora ficticia que aparece en la serie Odisea espacial, iniciada con la
-                    novela 2001 una odisea del espacio escrita por Arthur C. Clarke en 1968. HAL es la computadora
+                    Hal 9000 es una supercomputadora ficticia que aparece en la serie <i>Odisea espacial</i>, iniciada con la
+                    novela <i>2001 una odisea del espacio</i> escrita por Arthur C. Clarke en 1968. HAL es la computadora
                     encargada de controlar las funciones vitales de la nave espacial Discovery, la inteligencia
                     artificial cambia drásticamente su comportamiento a lo largo de la historia, está programado para no
                     recibir respuestas que contengan dudas, lo que lo hace muy parecido al pensamiento humano; su
@@ -66,7 +66,7 @@
                     que dudan o son escépticos, considerándolos mecanismos fallidos.
                 </p>
                 <img src="img/hal-9000.jpg" alt="Hal 9000"><br>
-                <a href="https://es.wikipedia.org/wiki/HAL_9000">+ + sobre Hal 9000 en la  Wikipedia</a>
+                <a href="https://es.wikipedia.org/wiki/HAL_9000">+ sobre Hal 9000 en la  Wikipedia</a><br><br>
             </section>
         </article>
     </main>
