--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Index - Artículo de robots</title>
 </head>
@@ -182,7 +183,7 @@
                 <a id = enlace href="https://elc.blogs.uoc.edu/es/robots-familiares-y-sociales"> <b>Robots familiares y sociales en la educación</b> </a></i></p>
             <img id="desiree" src="img/Desiree-Gomez.jpg" alt="Foto de Desiree, autora del artículo">
             <section>
-                <p id="desi"><b>Desirée Gómez.</b> Conservadora de contenidos y analista. Gestora de comunidades de la cuenta de
+                <p id="desi"> <b>DESIREÉ GÓMEZ.</b> Conservadora de contenidos y analista. Gestora de comunidades de la cuenta de
                     Twitter <a id = enlace href="https://twitter.com/eLC_UOC">@eLC_UOC</a> y especialista en contenido del blog del eLC en el equipo de Detección y
                     Análisis de Tendencias del eLearn Center de la Universitat Oberta de Catalunya. Lleva a cabo
                     tareas de detección y análisis de tendencias educativas, de innovación y tecnología,
