--- a/robots-de-ficcion.html
+++ b/robots-de-ficcion.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Robots de Ficción</title>
 </head>
@@ -41,12 +42,12 @@
             </section>
 
             <section>
-                <h4>Maria (Metropolis)</h4>
+                <h4>Maria <i> (Metropolis)</i></h4>
                 <p>
                     El robot María es una de las únicas imágenes robóticas de la ciencia ficción temprana. Aparece en
                     <i>Metropolis</i>, una película de ciencia ficción producida en Alemania en 1927 y dirigida por Fritz Lang.
                     Toda la película está dominada por la tecnología, con una mezcla de los años veinte y dispositivos
-                    futuristas.
+                    futuristas. <br><br>
                     La imagen de este robot femenino es una de las imágenes icónicas más potentes de la historia del
                     cine.
                 </p>
