--- a/tipos-de-robots.html
+++ b/tipos-de-robots.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" href="css/estilos.css">
     <title>Tipos de Robots</title>
 </head>
@@ -53,25 +54,25 @@
                 <img src="img/icon-robot.png" alt="Ícono de robot">
                 Clasificación de los robots según su uso:
                 <br><br>
-                <ul>
-                    <li>
+                <ul class="robot-list__items">
+                    <li class="robot-list__item">
                         Robots domésticos y comerciales
                     </li>
-                    <li>
+                    <li  class="robot-list__item">
                         Robots a la industria
                     </li>
-                    <ul>
-                        <li>
+                    <ul class="robot-list__subitems">
+                        <li class="robot-list__subitem">
                             Automovilística
                         </li>
-                        <li>
+                        <li class="robot-list__subitem">
                             Embalaje
                         </li>
-                        <li>
+                        <li class="robot-list__subitem">
                             Electrónica
                         </li>
                     </ul>
-                    <li>
+                    <li class="robot-list__item">
                         Vehículos automáticos
                     </li>
             </li>
