--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="img/isologo.png" alt="Isologo del Sitio">
         <nav>
             <ul>
-                <li><a href="index.html">ARTÍCULO: ROBOTS EN LA EDUCACION</a></li>
+                <li><a id="actual" href="index.html">ARTÍCULO: ROBOTS EN LA EDUCACION</a></li>
                 <li><a href="tipos-de-robots.html">TIPOS DE ROBOTS</a></li>
                 <li><a href="robots-de-ficcion.html">ROBOTS DE FICCION</a></li>
             </ul>
