--- a/tipos-de-robots.html
+++ b/tipos-de-robots.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">ARTÍCULO: ROBOTS EN LA EDUCACION</a></li>
-                <li><a href="tipos-de-robots.html">TIPOS DE ROBOTS</a></li>
+                <li><a id="actual" href="tipos-de-robots.html">TIPOS DE ROBOTS</a></li>
                 <li><a href="robots-de-ficcion.html">ROBOTS DE FICCION</a></li>
             </ul>
         </nav>
